--- a/veoc/templates/veoc/home_care_symtomatic.html
+++ b/veoc/templates/veoc/home_care_symtomatic.html
@@ -9,11 +9,11 @@
         			<div id="breadcrumb">
         				<ul class="breadcrumb">
         					 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-        					 <li class="active">Home Care Follow Up</li>
+        					 <li class="active">Home Care Symptomatic Cases</li>
         				</ul>
         			</div><!-- /breadcrumb-->
 
-            <div class="panel-heading">HOME CARE FOLLOW UP DATE REPORTED FILTER</div>
+            <div class="panel-heading">HOME CARE SYMPTOMATIC FOLLOW UP DATE REPORTED FILTER</div>
               <div class="panel-body" align="left">
                   <form class="form-inline" method="post" action="{% url 'veoc:home_care_follow_up' %}">{% csrf_token %}
                       <div class="form-group">
@@ -30,14 +30,14 @@
                   <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
               </div>
 
-              <div class="panel-heading"><b>COVID19 Home Care Follow Up Report</b></div>
+              <div class="panel-heading"><b>COVID19 Home Care Symptomatic Report</b></div>
 
         			<div class="padding-md">
         				<div class="row">
         					<div class="col-md-12">
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
-        								Home Care Follow Up Report
+        								Home Care Symptomatic Report
         								<span class="label label-info pull-right" id="totalspan">{{follow_data_count}} Reported cases </span>
         							</div>
         							<div class="padding-md clearfix">
