--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -168,6 +168,7 @@
                   <li><a href="/truck_driver_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x "></i></span>Truck Driver Register</a></li>
                   <li><a href="/truck_quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-list fa-stack-1x "></i></span>Drivers Quarantine List</a></li>
                   <li><a href="/truck_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Quarantine Follow Up</a></li>
+                  <li><a href="/truck_symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/truck_ongoing_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-tasks fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
                   <li><a href="/truck_complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-window-close fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
@@ -177,6 +178,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/reportable_diseases">Reportable Diseases</a></li>
                   <li><a href="/reportable_event">Reportable Events</a></li>
+                  <li><a href="/line_listing">MOH 503 - Line Listing</a></li>
               </ul>
           </li>
           <li>
@@ -196,6 +198,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/quarantine_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Self Quarantine List</a></li>
                   <li><a href="/follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Quarantine</a></li>
+                  <li><a href="/symptomatic_cases"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_quarantine"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Quarantine</a></li>
               </ul>
           </li>
@@ -204,6 +207,7 @@
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/home_care_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Home Care List</a></li>
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Ongoing Home Care</a></li>
+                  <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
           </li>
