Forgot password fix on login page

--- a/veoc/templates/veoc/change_password.html
+++ b/veoc/templates/veoc/change_password.html
@@ -26,7 +26,7 @@
                 in
         </div>
         <div class="modal-body">
-            <form class="col-md-12" center-block method="post" action="{% url 'change_password' %}"> {% csrf_token %}
+            <form class="col-md-12" center-block method="post" action="{% url 'veoc:change_password' %}"> {% csrf_token %}
                 <div class="form-group">
                     <input type="text" name="oldpassword" class="form-control input-lg" placeholder="Old Password">
                 </div>
@@ -35,7 +35,7 @@
                            placeholder="New Password">
                 </div>
                 <div class="form-group">
-                    <input type="password" name="newpassword_two" class="form-control input-lg"
+                    <input type="password" name="newpassword_two" id="newpassword_two" class="form-control input-lg"
                            placeholder="Confirm New Password">
                 </div>
                 <div class="form-group">
