--- a/veoc/templates/veoc/login.html
+++ b/veoc/templates/veoc/login.html
@@ -49,7 +49,8 @@
                             <input type="checkbox" onclick="myFunction()">Show Password
                         </div>
                         <div class="p-t-20">
-                            <button class="btn btn--radius btn--green" type="submit">Login</button>
+                            <button class="btn btn--radius btn--green" type="submit">  Login  </button>
+                              <button class="btn btn--radius btn--green" onClick="location.href='{% url 'veoc:forgot_password' %}'">Forgot Password</button>
                         </div>
                     </form>
                 </div>
