--- a/veoc/templates/veoc/login.html
+++ b/veoc/templates/veoc/login.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="p-t-20">
                             <button class="btn btn--radius btn--green" type="submit">  Login  </button>
-                              <button class="btn btn--radius btn--green" onClick="location.href='{% url 'veoc:forgot_password' %}'">Forgot Password</button>
+{#                              <button class="btn btn--radius btn--green" onClick="location.href='{% url 'veoc:forgot_password' %}'">Forgot Password</button>#}
                         </div>
                     </form>
                 </div>
