--- a/veoc/templates/veoc/truck_quarantine_complete.html
+++ b/veoc/templates/veoc/truck_quarantine_complete.html
@@ -100,46 +100,99 @@
                         <div class="row">
                           <div class="col-md-12">
                             <div class="panel panel-default">
-                              <div class="panel-heading"><b>Quarantined Revisit Details</b></div>
+                              <div class="panel-heading"><b>Fill in All Revisit Details</b></div>
                               <div class="panel-body" align="center">
-                                <form method="post" action="#">
+                                <form method="POST" id="track_driver_revisit_form" class="track_driver_revisit_form" action="{% url 'veoc:truck_driver_revisit' %}">
+                                {% csrf_token %}
                                   <div class="form-group" style="display: none;">
                                       <input class="form-control id" name="id" style="display: none;">
                                   </div>
+                                <div class="form-group col-md-4">
+                                    <label for="heading">Driver Names:</label>
+                                    <input class="form-control names" name="names" readonly>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="heading">Phone Number:</label>
+                                    <input class="form-control phone_num" name="phone_num" readonly>
+                                </div>
+                                <div class="form-group col-md-4">
+                                    <label for="heading">Passport Num:</label>
+                                    <input class="form-control passport" name="passport" readonly>
+                                </div>
                                   <div class="form-row">
                                       <div class="form-row" id="gender_details_div">
-                       <div class="form-group col-md-6">
-                         <label for="borderpoint">Border Point : *</label>
-                         <select class="form-control" name="border_name" id="border_name" >
-                              <option value="" disabled selected>Select Border Point</option>
-                              {% for b_point in border_points %}
-                                  <option value="{{b_point.border_name}}">{{b_point.border_name}}</option>
-                              {% endfor %}
-                          </select>
-                       </div>
-                       <div class="form-group col-md-6">
-                             <label for="weighbridgesite">Weighbridge Site : *</label>
-                             <select class="form-control" name="weighbridge_name" id="weighbridge_name" >
-                                  <option value="" disabled selected>Select Weighbridge Site</option>
-                                  {% for qty in weigh_site %}
-                                      <option value="{{qty.weighbridge_name}}">{{qty.weighbridge_name}}</option>
-                                  {% endfor %}
-                              </select>
-                            </div>
-                    </div>
-                                  
-
+                                      <div class="form-group col-md-6">
+                                         <label for="datereport">Date of Revisit : </label>
+                                         <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max="{{ day }}" name="date_of_arrival">
+                                    </div>
+                                       <div class="form-group col-md-6">
+                                         <label for="borderpoint">Border Point : *</label>
+                                         <select class="form-control" name="border_name" id="border_name" >
+                                              <option value="" disabled selected>Select Border Point</option>
+                                              {% for b_point in border_points %}
+                                                  <option value="{{b_point.border_name}}">{{b_point.border_name}}</option>
+                                              {% endfor %}
+                                          </select>
+                                       </div>
+                                       <div class="form-group col-md-6">
+                                         <label for="weighbridgesite">Weighbridge Site : </label>
+                                         <select class="form-control" name="weighbridge_name" id="weighbridge_name" >
+                                              <option value="" disabled selected>Select Weighbridge Site</option>
+                                              {% for qty in weigh_site %}
+                                                  <option value="{{qty.weighbridge_name}}">{{qty.weighbridge_name}}</option>
+                                              {% endfor %}
+                                          </select>
+                                        </div>
+                                      <div class="form-row" id="symptoms_div">
+                                           <div class="form-group col-md-6">
+                                             <label for="cough">Cough : </label>
+                                             <select class="form-control" id="cough" name="cough" required>
+                                               <option value="" disabled selected>Select Option</option>
+                                               <option value="t">Yes</option>
+                                               <option value="f">No</option>
+                                             </select>
+                                           </div>
+                                           <div class="form-group col-md-6">
+                                             <label for="breathing">Breathing Difficulty : </label>
+                                             <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
+                                               <option value="" disabled selected>Select Option</option>
+                                               <option value="t">Yes</option>
+                                               <option value="f">No</option>
+                                             </select>
+                                           </div>
+                                           <div class="form-group col-md-6">
+                                             <label for="fever">Fever : </label>
+                                             <select class="form-control" id="fever" name="fever" required>
+                                               <option value="" disabled selected>Select Option</option>
+                                               <option value="t">Yes</option>
+                                               <option value="f">No</option>
+                                             </select>
+                                           </div>
+                                           <div class="form-group col-md-6">
+                                             <label for="sample">Sample Taken : </label>
+                                             <select class="form-control" id="sample_taken" name="sample_taken" required>
+                                               <option value="" disabled selected>Select Option</option>
+                                               <option value="t">Yes</option>
+                                               <option value="f">No</option>
+                                             </select>
+                                           </div>
+                                         </div>
+                                         <div class="form-row" id="comobidity_details_div">
+                                           <div class="form-group col-md-6">
+                                             <label for="temperature">Temperature : </label>
+                                             <input class="form-control" type=number step=0.01 id="temperature" name="temperature" onchange="checkTemp()" maxlength="5" placeholder="temperature"/>
+                                           </div>
+                                    </div>
+                                  </div>
+                                  <div class="form-row" id="save_div">
+                                    <div class="form-group col-md-12">
+                                        <button type="submit" class="btn btn-success btn-sm pull-right">Add Quarantine Revisit</button>
+                                    </div>
+                                      <div class="form-group col-md-12">
+                                      </div>
                                   </div>
                                 </form>
-                                <button type="submit" onClick="openMap()" class="btn btn-success btn-sm pull-right">View Map</button>
                             </div>
-                          </div><!-- /div panel-default -->
-                          <div class="panel panel-default">
-                            <div class="panel-heading"><b>Patient Self Reporting Locations</b></div>
-                            <div class="panel-body">
-                              <div id="map_div">
-                              </div><!-- div to hold map -->
-                            </div><!-- panel-body -->
                           </div><!-- /div panel-default -->
                           </div>
                         </div>
@@ -152,6 +205,7 @@
 {% endblock %}
 
 {% block script %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script>
     $(document).ready(function () {
           $('#quarantine_complete_report').DataTable({
@@ -184,6 +238,95 @@
               });
           });
       });
+
+
+    $(document).on( "click", '.revisit_view',function(e) {
+
+      var id = $(this).data('id');
+      var names = $(this).data('names');
+      var phone_num = $(this).data('phone_number');
+      var passport = $(this).data('passport_number');
+
+      console.log(names);
+
+      $(".id").val(id);
+      $(".names").val(names);
+      $(".phone_num").val(phone_num);
+      $(".passport").val(passport);
+  });
+
+    var revisitsForm = $(".track_driver_revisit_form")
+
+      revisitsForm.submit(function(e){
+        e.preventDefault();
+        console.log("inside revisitsForm");
+        var thisForm = $(this);
+        var endPoint = thisForm.attr("action") || window.location.href;
+        var method = thisForm.attr("method");
+        var formData = thisForm.serialize();
+
+        Swal.fire({
+          title: "Please wait!,Saving Details!",
+          // text: "Please wait",
+          imageUrl: "/static/images/ajax-loader.gif",
+          showConfirmButton: false,
+          allowOutsideClick: false
+        });
+        $.ajax({
+          type:method,
+          url:endPoint,
+          data: formData,
+          success:function(data){
+            if(data == "error"){
+              console.log(trucksForm[0])
+              Swal.fire({
+                title: 'Duplicate Data Entry!!',
+                text: 'Names and Phone number entered already exist in the system and still ongoing quarantine!!',
+                icon: 'info'
+              });
+            }else{
+              Swal.fire({
+                title: 'Success!',
+                text: 'Driver added to quarantine revisit',
+                icon: 'success'
+              });
+              revisitsForm[0].reset();
+            }
+          },
+          error:function(er){
+              console.log(er)
+            console.log("Revisit saving error");
+            console.log(er.responseText);
+            Swal.fire({
+              title: 'Error!',
+              text: 'Quarantine Revisit Details Cannot be Saved',
+              icon: 'error'
+            });
+          }
+        });
+
+      });
+
+  function checkTemp(){
+       var temp = $('#temperature').val();
+       // console.log(number);
+       if(temp.length > 4 || temp.length < 2){
+         console.log("Enter valid temperature");
+         Swal.fire({
+           title: 'error!',
+           text: 'Enter a valid temperature measure',
+           icon: 'error'
+         });
+         document.getElementById("temperature").focus();
+       }else if(temp < 34 || temp > 45){
+         Swal.fire({
+           title: 'error!',
+           text: 'Temperature value should be between 34 and 45 Degrees',
+           icon: 'error'
+         });
+         document.getElementById("temperature").focus();
+       }
+     }
 
   </script>
 {% endblock %}
